--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "program": "${workspaceFolder}/Sources/Stage0-cs/Neu/bin/Debug/net6.0/Neu.dll",
             "args": [
                 "tests",
-                // "--dump-ast"
+                // "--dump-ast",
+                // "--silent",
             ],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
