--- a/Sources/Stage0-cs/Neu/Neu.csproj
+++ b/Sources/Stage0-cs/Neu/Neu.csproj
@@ -15,7 +15,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\Base\Base.csproj" />
-    <!-- <ProjectReference Include="..\IR\IR.csproj" /> -->
+    <ProjectReference Include="..\IR\IR.csproj" />
   </ItemGroup>
 
 </Project>
